--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<p>The page is under construction. Please wait...</p>
 		<p>Here is some useful links:</p>
 		<ul>
-			<li><a href="blog.frigussum.com">The old blog</a>, is considered not to be updated anymore.</li>
-			<li><a href="garden.frigussum.com">My digital garden</a>, where saves my notes.</li>
-			<li><a href="luopr.frigussum.com">My personal homepage in reality</a>.</li>
+			<li><a href="https://old.frigussum.com">The old blog</a>, is considered not to be updated anymore.</li>
+			<li><a href="https://garden.frigussum.com">My digital garden</a>, where saves my notes.</li>
+			<li><a href="https://luopr.frigussum.com">My personal homepage in reality</a>.</li>
 
 		</ul>
 	</body>
